--- a/projeto3/relatorio/main.tex
+++ b/projeto3/relatorio/main.tex
@@ -28,13 +28,20 @@
 % \renewcommand\thesubsection{\Alph{subsection}}
 \graphicspath{ {./graficos/} }
 
+
+
 \begin{document}
 \noindent
-\large\textbf{Autor:} Jefter Santiago \hfill \textbf{Projeto - \#}   \\
+\large\textbf{Autor:} Jefter Santiago \hfill \textbf{Projeto 3: {\color{blue}\emph{Equações de Onda
+      II - Análise de Fourier}}}   \\
 \#USP: 12559016 \\
 \normalsize Curso: Física Estatística Computacional \hfill 2024.1 \\
-Prof. F. C. Alcaraz \hfill Data de entrega: \\
+Prof. F. C. Alcaraz \hfill Data de entrega: 13/04/2024\\
 \noindent\rule{7in}{2.8pt}
+
+
+
+\section{Item a}
 
 
 \end{document}
