--- a/projeto2/relatorio/main.tex
+++ b/projeto2/relatorio/main.tex
@@ -31,9 +31,26 @@
 % \renewcommand\thesubsection{\Alph{subsection}}
 \graphicspath{ {./graficos/} }
 
+
+
+\hypersetup{
+  pdfauthor={Jefter Santiago},
+  pdftitle={Projeto 2 - Equações de Onda I},
+%  pdfkeywords={},
+%  pdfsubject={Anotações métodos matemáticos aplicados à física},
+  pdfcreator={Jefter Santiago}, 
+  pdflang={Portuguese},
+  colorlinks=true,    % Color links instead of boxes
+  linkcolor=blue,     % Color of internal links
+  citecolor=green,    % Color of citation links
+  urlcolor=blue,      % Color of URLs
+}
+
+
+
 \begin{document}
 \noindent
-\large\textbf{Autor:} Jefter Santiago \hfill \textbf{Projeto 2: {\color{blue}\emph{Equações de ondas - I}}}   \\
+\large\textbf{Autor:} Jefter Santiago \hfill \textbf{Projeto 2: {\color{blue}\emph{Equações de ondas I}}}   \\
 \#USP: 12559016 \\
 \normalsize Curso: Física Estatística Computacional \\
 Prof. F. C. Alcaraz \hfill Data de entrega: 06/04/2024\\
@@ -120,7 +137,7 @@ Como foi discutido anteriormente (\ref{sec:erro}) o $\Delta x$ escolhido
 foi fixado para todas simulações. Além disso a velocidade de nossas ondas também é mantida constante
 igual à \( c = 300\) (m/s). Com isso podemos variar os paramêtros de \( r \) e \( \Delta t \). 
 
-Foi escolhido um periodo total\footnote{periodo?} de \( t = 0,01\)(s)  de forma que, para uma onda à velocidade da luz
+Foi escolhido um periodo total de \( t = 0,01\)(s)  de forma que, para uma onda à velocidade da luz
 dentro de uma caixa de \( 1\)(m) hajam 3 reflexões.
 
 
