--- a/projeto3/relatorio/main.tex
+++ b/projeto3/relatorio/main.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper, 11pt]{article}
-\usepackage[margin=0.5in]{geometry}
+\documentclass[a4paper, 11pt]{tufte-handout}
+\usepackage[margin=0.8in]{geometry}
 \usepackage{framed}
 \usepackage{graphicx}
 \usepackage{xcolor}
@@ -11,6 +11,8 @@
 \usepackage{amssymb}
 \usepackage{indentfirst}
 \usepackage{hyperref}
+%\usepackage{tufte-book} % or
+\usepackage{tufte-handout}% for a handout
 % \usepackage{txfonts}
 \usepackage{amsmath}
 \usepackage{titling}
