--- a/projeto5/relatorio/main.tex
+++ b/projeto5/relatorio/main.tex
@@ -1,6 +1,5 @@
 \documentclass[a4paper, 11pt]{tufte-handout}
-% \documentclass[a4paper, 11pt]{article}
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=0.7in]{geometry}
 \usepackage{framed}
 \usepackage{graphicx}
 \usepackage{xcolor}
@@ -8,16 +7,20 @@
 \usepackage{xcolor}
 \usepackage{mdframed}
 \usepackage{indentfirst}
+\usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{hyperref}
-\usepackage{txfonts}
+%\usepackage{txfonts}
 \usepackage{amsmath}
 \usepackage{titling}
 \usepackage{titlesec}
 \usepackage[brazil]{babel}
 \definecolor{LightGray}{gray}{0.97}
 \usepackage{minted}
+\usepackage{xcolor}
 
-\setminted[fortran]{  framesep=2mm,
+\setminted[fortran]{
+  framesep=2mm,
   baselinestretch=1.2,
   bgcolor=LightGray,
   fontsize=\footnotesize,
@@ -39,16 +42,79 @@
   urlcolor=blue,      % Color of URLs
 }
 
+
+\title{\color{blue}Projeto 5 - Simulações de Monte Carlo}
+\author{Jefter Santiago (12559016)}
+\date{Entrega: 01/06/2024}
 \begin{document}
+\maketitle
+
+
+\section{Introdução}
+
+
+\section{Detalhes de implementação}
+
+
+\section{Tarefa 1 - Configurações finais do modelo de Ising para diferentes $\beta$}
+
+\begin{minted}{fortran}
+    implicit real(j-j)
+    parameter(L = 100)
+    dimension exps(-4:4)
+    byte lattice(1:L, 1:L)
+  
+    ! periodic boundary conditions
+    dimension ipbc(0:L+1)
+    ! this or using mod
+  
+    L_real = 100
+    
+    do i = 1, L_real
+        ipbc(i) = i
+    end do  
+    ipbc(0) = L_real
+    ipbc(L_real+1) = 1
+  
+    beta = 3
+  
+    call define_exponentials(exps, beta)
+  
+    m = 0
+    call initialize_lattice(lattice, m, L_real)
+    
+    call write_lattice(lattice, L_real, 1)
+  
+     ! initial energy
+    E_0 = H_0(lattice, ipbc, m, L_real)
+  
+    open(1, file="saida-configuracao.dat")
+    rnd = rand(iseed)
+     ! intialize monte carlo dynamics
+    do MC_step = 1, 1000
+        write(2, *) m, E
+        ! sweeps all configurations
+        ! randomly flips spins
+        do i = 1 , L_real * L_real
+           call flip_spin(lattice,ipbc,exps,E,m,L_real)
+        end do   
+    end do  
+    call write_lattice(lattice, L_real, 1) 
+    close(1)
+    end
+\end{minted}
 
 
 
 
-\section{Tarefa 1}
-\section{Tarefa 2}
-\section{Tarefa 3}
-\section{Tarefa 4}
+\section{Tarefa 2 - Processo de \emph{recozimento}}
+\section{Tarefa 3 - Loop térmico}
+\section{Tarefa 4 }
 \section{Tarefa 5}
 
 
 \end{document}
+%%% Local Variables:
+%%% mode: LaTeX
+%%% TeX-master: t
+%%% End:
